--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -244,7 +244,12 @@
                                                         <div class="col-md-6">
                                                             <div class="detailText">
                                                                 <ul class="list-inline appointDeatailDiv">
-                                                                    <li><a href="#">Details</a></li>
+                                                                    <li class="active">
+                                                                        <a aria-controls="detail" role="tab" data-toggle="tab" data-target="#detail">Details</a>
+                                                                    </li>
+                                                                    <li>
+                                                                        <a aria-controls="customer" role="tab" data-toggle="tab" data-target="#customer">Customer</a>
+                                                                    </li>
                                                                 </ul>
                                                             </div>
                                                         </div>
@@ -260,8 +265,8 @@
                                                             </div>
                                                         </div>
                                                     </div>
-
-                                                    <div class="deatailForm">
+                                                    <div class="tab-content">
+                                                    <div class="deatailForm tab-pane active" id="detail">
                                                         <div class="form-group">
                                                             <label class="control-label col-sm-4" for="email">Provider</label>
                                                             <div class="col-sm-8">
@@ -353,11 +358,130 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                       
+                                                            <div id="customer" class="tab-pane" ng-show="ShowCustomerDiv">
+                                                                <div class="customerProfileDiv homeCustomerDiv">
+                                                                    <div class="crossIcon">
+                                                                        <a href="">×</a>
+                                                                    </div>
+                                                                    <div class="clearfix"></div>
+                                                                    <div class="form-horizontal imageUploadForm ng-pristine ng-valid" action="">
+                                                                        <div class="form-group appointaploadDiv customertext">
+                                                                            <label class="control-label col-md-3 col-sm-12 col-xs-3 customerUserDiv">
+                                                                                <img src="/Content/Assets/images/provider_img2.png">
+
+                                                                                <div class="fileupload fileupload-new" data-provides="fileupload">
+                                                                                    <span class="btn btn-primary btn-file">
+                                                                                        <span class="fileupload-new">
+
+                                                                                        </span>
+
+                                                                                        <input type="file">
+                                                                                    </span>
+
+
+                                                                                </div>
+                                                                                <!--<span class="uploadImageIcon"><i class="fa fa-camera" aria-hidden="true" style="margin-left: 4px; "></i></span>-->
+                                                                            </label>
+                                                                            <div class="col-md-9 col-sm-12 col-xs-9 customerNameDiv appCustomer">
+                                                                                <!--<input type="text" class="customerName namevalueField " value="Name" id="name" name="CustomerName" placeholder="Name"  ng-model="CustomerName" >-->
+                                                                                <label class="control-label appCustomername">{{CustomerName}}</label>
+</div>
+                                                                        </div>
+
+                                                                    </div>
+
+                                                                    <div class="form-horizontal customerDetail">
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12">Email</label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12" style="font-size: 12px;">
+                                                                                <label class="control-label">{{CustomerEmail}}</label>
+                                                                                <!--<input type="email" class="form-control" id="email" placeholder="Email" name="email" ng-model="CustomerEmail" >-->
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12">Mobile</label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12">
+                                                                                <div class="row">
+                                                                                    <div class="col-md-4 ">
+                                                                                        <label class="control-label">{{Code}}</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-8 textNumberDiv" style="padding-left:0;">
+                                                                                        <label class="control-label">{{CustomerTelephone}}</label>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12">Office</label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12">
+                                                                                <label class="control-label">Phone</label>
+                                                                                
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12">Home</label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12">
+                                                                                <label class="control-label">Phone</label>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12">Address</label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12">
+                                                                                <label class="control-label">Address</label>
+                                                                            </div>
+                                                                        </div>
+
+                                                                        <div class="form-group">
+                                                                            <label class="control-label col-md-3 col-xs-3 col-sm-12"></label>
+                                                                            <div class="col-md-9 col-xs-9 col-sm-12">
+                                                                                <div class="row">
+                                                                                    <div class="col-md-4">
+                                                                                        <label class="control-label">City</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-4 textNumberDiv" style="padding-left:0;">
+                                                                                        <label class="control-label">State</label>
+                                                                                    </div>
+                                                                                    <div class="col-md-4 textNumberDiv" style="padding-left:0;">
+                                                                                        <label class="control-label">Zip</label>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+
+                                                                    </div>
+
+                                                                </div>
+
+                                                                <!--<div class="appSearchdiv">
+                                                                    <div class="appinputHolder">
+                                                                        <input class="appt-customer-input form-control" placeholder="Search Customer" type="text">
+                                                                        <div class="customerSearchicon">
+                                                                            <i class="fa fa-search" aria-hidden="true"></i>
+                                                                        </div>
+
+                                                                        <ul class="appCustomerDropdown">
+                                                                            <li><a href="#">was</a></li>
+                                                                        </ul>
+                                                                    </div>
+                                                                    <div class="appnewCustomer">
+                                                                        <a href="#"> + New Customer</a>
+                                                                    </div>
+                                                                </div>-->
+
+                                                            </div>
+                                                     
+                                                    </div>
+                                                  
                                                 </div>
                                                 <div class="modal-footer">
                                                     <div class="btn-group apptSaveBtn" role="group">
                                                         <button type="submit" class="btn btn-default" data-action="save" role="button">Save Appointment</button>
                                                     </div>
+                                                    <div class="customerDeleteBtn">
+                                                        <a ng-click="DeleteAppointment()" class="cursorhand">Delete</a>
+                                                    </div>
+                                                    <div class="clearfix"></div>
                                                 </div>
                                             </form>
                                         </div>
