--- a/AngularMvcProject/Content/Assets/css/custom.css
+++ b/AngularMvcProject/Content/Assets/css/custom.css
@@ -1264,9 +1264,15 @@ ul.lableDropdownContent li a:hover {
     border-bottom: 0;
 	margin: 10px 0;
 }
-.detailText .appointDeatailDiv li a {
+.detailText .appointDeatailDiv li.active a {
     padding-bottom: 24px !important;
     border-bottom: 2px #4f4f4f solid;
+    color: #4f4f4f !important;
+	font-size:11px !important;
+}
+.detailText .appointDeatailDiv li a {
+    padding-bottom: 24px !important;
+    border-bottom: none;
     color: #4f4f4f !important;
 	font-size:11px !important;
 }
@@ -1421,10 +1427,10 @@ span.serviceCheckboxDiv input.sampleCheckbox {
     float: left;
 }
 .apptSaveBtn .btn {
-    background: #ACBBBA;
+    background: #27C3BB;
     color: #fff;
     font-size: 14px;
-	border:1px solid #ACBBBA;
+	border:1px solid #27C3BB;
 	line-height: 26px;
 }
 .apptSaveBtn .btn:hover {
@@ -2151,9 +2157,15 @@ table#mytable tr td {
     margin-top: -3px;
 }
 .customerProfileDiv {
-    margin: 40px 0 0 15px;
+    margin: 25px 15px;
     position: relative;
    
+}
+div#detail {
+    margin: 25px 15px;
+}
+.customermedia {
+    height:410px !important;
 }
 .selectCustomer .popOverDeleteBtn .delete_btn span {
 	margin-right:3px;
@@ -4110,6 +4122,126 @@ div#pie svg.dxc.dxc-chart {
 .createdOnby ul.list-inline li a:hover {
     border:none;
 }
+
+
+/*  Sep-5 css start here ====================== */
+
+.customertext img {
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+}
+.customertext span.uploadImageIcon i {
+    left: 58px;
+    width: 24px;
+    height: 24px;
+    font-size: 12px;
+    padding-top: 5px;
+    top: 17px;
+}
+.appCustomer .customerName {
+    margin-top: 10px;
+   font-size: 20px !important;
+   padding-left: 6px;
+}
+.appCustomername {
+    font-size: 20px !important;
+    margin-top: 5px;
+}
+.customerDeleteBtn a {
+    float: right;
+    line-height: 40px;
+    color: #949494 !important;
+    text-decoration: none !important;
+    cursor: pointer;
+    font-size:12px;
+}
+   
+.customertext {
+    margin-bottom: 0px;
+}
+.customertext .fileupload {
+    margin-bottom: 0;
+}
+.homeCustomerDiv {
+     border: 1px solid #E1E1E1;
+     padding:10px;
+}
+.crossIcon {
+    float:right;
+}
+.appinputHolder {
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
+    padding-bottom: 25px;
+    border-bottom: 1px dashed #CCC;
+    position: relative;
+}
+.appinputHolder .appt-customer-input {
+    box-shadow: none;
+    transition: none;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    padding-right: 30px;
+    height: 40px;
+    font-size: 13px;
+    text-indent: 5px;
+}
+.appinputHolder .appt-customer-input:focus {
+      background-color: #fff !important;
+    border-color: rgba(39, 195, 187, 0.8) !important;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+}
+  
+
+.appinputHolder .customerSearchicon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #7d7d7d;
+}
+.appnewCustomer a {
+        width: 130px;
+    display: block;
+    margin: 30px auto 50px auto;
+    background: #F1F5F7;
+    border: solid 1px #D7D7D7;
+    line-height: 40px;
+    color: #5a5a5a !important;
+    font-size: 13px;
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+    border-radius: 3px 3px 3px 3px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none !important;
+}
+.crossIcon a {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+.appCustomerDropdown {
+    list-style-type: none;
+    z-index: 1002;
+    background: none repeat scroll 0 0 #FFF;
+    box-shadow: 0 1px 6px #777;
+    font-weight: normal;
+    font-size: 14px;
+    width: 100%;
+    margin-left: 2px;
+    margin-top: -4px;
+    position: absolute;
+    max-height: 122px;
+    overflow: auto;
+    padding: 10px;
+}
+
+/*  Sep-5 css end here ====================== */
 
 /* media css start here ================================= */
 
