--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -359,18 +359,18 @@
                                                         </div>
                                                     </div>
                                                        
-                                                            <div id="customer" class="tab-pane" ng-show="ShowCustomerDiv">
+                                                            <div id="customer" class="tab-pane">
                                                                 <div class="customerProfileDiv homeCustomerDiv">
-                                                                    <div class="crossIcon">
+                                                                    <!--<div class="crossIcon">
                                                                         <a href="">×</a>
-                                                                    </div>
+                                                                    </div>-->
                                                                     <div class="clearfix"></div>
                                                                     <div class="form-horizontal imageUploadForm ng-pristine ng-valid" action="">
                                                                         <div class="form-group appointaploadDiv customertext">
                                                                             <label class="control-label col-md-3 col-sm-12 col-xs-3 customerUserDiv">
                                                                                 <img src="/Content/Assets/images/provider_img2.png">
 
-                                                                                <div class="fileupload fileupload-new" data-provides="fileupload">
+                                                                                <!--<div class="fileupload fileupload-new" data-provides="fileupload">
                                                                                     <span class="btn btn-primary btn-file">
                                                                                         <span class="fileupload-new">
 
@@ -380,7 +380,7 @@
                                                                                     </span>
 
 
-                                                                                </div>
+                                                                                </div>-->
                                                                                 <!--<span class="uploadImageIcon"><i class="fa fa-camera" aria-hidden="true" style="margin-left: 4px; "></i></span>-->
                                                                             </label>
                                                                             <div class="col-md-9 col-sm-12 col-xs-9 customerNameDiv appCustomer">
