--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -153,7 +153,9 @@
                 <li class="side-nav-tooltip" id="side-dashboard" data-toggle="tooltip" data-original-title="Dashboard" data-placement="right">
                     <a ng-click="redirecttodashboard()" style="cursor:pointer;" data-toggle="tab" class="setmore-icon-home" id="startDashboard"><small>Dashboard</small></a>
                 </li>
-                <li class="side-nav-tooltip" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar"> <a href="" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a> </li>
+                <li class="side-nav-tooltip" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar">
+                    <a ng-click="redirectToCalendar()" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a>
+                </li>
                 <li class="side-nav-tooltip active" id="side-customers" title="" data-toggle="tooltip" data-original-title="Customers" data-placement="right">
                     <a ng-click="redirecttoCustomer()" style="cursor:pointer;" data-toggle="tab" class="setmore-icon-users2" id="side-nav-customers"><small>Customers</small></a>
                 </li>
