--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -132,7 +132,9 @@
             <li class="side-nav-tooltip cursorhand" id="side-dashboard" data-toggle="tooltip" data-original-title="Dashboard" data-placement="right">
                 <a ng-click="redirecttodashboard()" data-toggle="tab" class="setmore-icon-home" id="startDashboard"><small>Dashboard</small></a>
             </li>
-            <li class="side-nav-tooltip cursorhand" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar"> <a href="" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a> </li>
+            <li class="side-nav-tooltip" id="side-calendar" data-placement="right" data-toggle="tooltip" data-original-title="Calendar">
+                <a ng-click="redirectToCalendar()" data-toggle="tab" class="setmore-icon-calendar-31" id="startCalendar"><small>Calendar</small></a>
+            </li>
             <li class="side-nav-tooltip cursorhand" id="side-customers" title="" data-toggle="tooltip" data-original-title="Customers" data-placement="right">
                 <a ng-click="redirecttoCustomer()" data-toggle="tab" class="setmore-icon-users2" id="side-nav-customers"><small>Customers</small></a>
             </li>
