extra field attached

--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -165,6 +165,9 @@
                         <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
                             <h2 style="margin-top:0px"> Selected Event:</h2>
                             <h3 style="color:#A9A50E">{{SelectedEvent.title}}</h3>
+                            <h3 style="color:#A9A50E">{{SelectedEvent.id}}</h3>
+                            <h3 style="color:#A9A50E">{{SelectedEvent.start}}</h3>
+                            <h3 style="color:#A9A50E">{{SelectedEvent.end}}</h3>
                             <p>{{SelectedEvent.description}}</p>
                         </div>
                     </div>
