calendar init functionality

--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="calendarController">
+﻿<div ng-controller="calendarController" ng-init="init()">
     <header class="top">
         <div class="logo_section"> <a class="logo" href="#"></a><img src="/Content/Assets/images/logo.png" alt="Logo"></a> </div>
         <h1>Calendar</h1>
