--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -145,7 +145,7 @@
             <li class="side-nav-tooltip cursorhand active" id="settings_new" data-original-title="Settings" data-placement="right" data-toggle="tooltip">
                 <a ng-click="RedirecttoStaff()" data-toggle="tab" class="fa fa-cog"><small>Settings</small></a>
 
-
+            <li class="side-nav-tooltip reports" data-toggle="tooltip" data-original-title="Reports" data-placement="right"> <a class="fa fa-line-chart" ng-click="RedirecttoReport()"><small>Reports</small></a> </li>
 
             </li>
 
